--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -3,18 +3,17 @@
 {% block title %}Hello DefaultController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/michael/php/bauer/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/michael/php/bauer/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
-    </ul>
+<div class="d-flex justify-content-center">
+<div class="card">
+  <div class="card-title">
+  Bauer
+  </div>
+  <div class="card-body">
+    <h1 class="text-center">{{ product }}</h1>
+    <h4>{{ description }}</h4>
+  </div>
+</div>
 </div>
 {% endblock %}
