--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -7,12 +7,27 @@
 
 <div class="d-flex justify-content-center">
 <div class="card">
-  <div class="card-title">
-  Bauer
+  <div class="card-header text-center">
+    <h1>{{ product }}</h1>
   </div>
   <div class="card-body">
-    <h1 class="text-center">{{ product }}</h1>
     <h4>{{ description }}</h4>
+  </div>
+  <div class="card-body">
+    <h5 class="card-subtitle">Tilgængelige kalendere:</h5>
+    <nav class="nav flex-column">
+      <a class="nav-link active" aria-current="page" href="{{ url('calendar') }}">Dansk</a>
+      <a class="nav-link" href="#">Norsk</a>
+      <a class="nav-link" href="#">Svensk</a>
+      <a class="nav-link" href="#">Engelsk</a>
+      <a class="nav-link" href="#">Romersk-katolsk</a>
+      <a class="nav-link" href="#">Juliansk</a>
+      <a class="nav-link" href="#">Gregoriansk</a>
+      <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+    </nav>
+  </div>
+    <div class="card-footer text-body-secondary">
+    2 days ago
   </div>
 </div>
 </div>
