--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="application-name" content="{{ product }}"/>
-    <meta name="description" content="{{ description }}">
+    <meta name="description" content="{{ 'bauer.description' | trans }}">
     <meta name="keywords" content="Bauers Kalender, Bauers Calendar, Slægtsforskning, Kirkebøger"/>
     <meta name="author" content="{{ author }}"/>
     <meta name="generator" content="PHP, Symfony 6.3, Bootstrap 5.3.2"/>
