Forsiden: yderligere revisioner med oversættelser

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -14,7 +14,7 @@
     <h4>{{ 'bauer.description' | trans }}</h4>
   </div>
   <div class="card-body">
-    <h5 class="card-subtitle">Tilgængelige kalendere:</h5>
+    <h5 class="card-subtitle">{{'bauer.tilgængelige' | trans}}:</h5>
     <nav class="nav flex-column">
       <a class="nav-link active" aria-current="page" href="{{ url('calendar') }}">{{'bauer.dansk' | trans}}</a>
       <a class="nav-link disabled" href="#">{{'bauer.norsk' | trans}} - <span class="badge bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
