Rettelser i forside og kalender layout

--- a/templates/calendar/index.html.twig
+++ b/templates/calendar/index.html.twig
@@ -25,9 +25,9 @@
 
 
   <div class='container-flex d-flex justify-content-center'>
-		<div class="table-responsive-xl">
-    	<table class="table table-fixed table-bordered table-light table-sm" >
-    	  <caption class='' style="caption-side:top">
+		<div class="table-responsive-xxl">
+    	<table class="table table-bordered table-light table-sm caption-top" >
+    	  <caption>
 				<div class="row">
     				<div class= 'col-sm'> 
 						<h3 class="tesxt-left">{{ bauer.getCalendarName() }}</h3>
@@ -50,7 +50,7 @@
       				{% endfor %}
     				</tr>
   				</thead>
-					<body>
+				<tbody>
         		{% for d in 1..31 %}
           		<tr class='small'>
             		{% for mm in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]|slice(nn,6) %}
@@ -64,9 +64,9 @@
 						{% set info= bauer.getDateInfo(d, mm, bauer.getYear()) %}
               			{# % if bauer.setDato(d, mm) % #}
               			{% if info['class'] > 0 %}
-                			<th scope= "col" {% if info['class'] > 1 %} class="text-bg-secondary bg-opacity-50" {% endif %}>{{ info['ugedag']|trans()|slice(0,2)|capitalize }}  </th>
-                			<td scope= "col" class="text-right {% if info['class'] == 3 %} text-bgg-secondary {% endif %}">{{ d }}</td>
-                			<td scope= "col" style='width: 160px' class="text-truncate {% if info['class'] == 3 %} text-bgg-secondary {% endif %}" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="{{ info['tooltip']|trans }}">
+                			<th {% if info['class'] > 1 %} class="text-bg-secondary bg-opacity-50" {% endif %}>{{ info['ugedag']|trans()|slice(0,2)|capitalize }}  </th>
+                			<td class="text-end" {% if info['class'] == 3 %} text-bgg-secondary {% endif %}>{{ d }}</td>
+                			<td style='width: 160px' class="text-truncate" {% if info['class'] == 3 %} text-bgg-secondary {% endif %} data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-html="true" title="{{ info['tooltip']|trans }}">
 						  		{{ info['description']|trans }} 
 							</td>
 
