--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -17,12 +17,12 @@
     <h5 class="card-subtitle">{{'bauer.tilgængelige' | trans}}:</h5>
     <nav class="nav flex-column">
       <a class="nav-link active" aria-current="page" href="{{ url('calendar') }}">{{'bauer.dansk' | trans}}</a>
-      <a class="nav-link disabled" href="#">{{'bauer.norsk' | trans}} - <span class="badge bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
-      <a class="nav-link disabled" href="#">{{'bauer.svensk' | trans}} - <span class="badge bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
-      <a class="nav-link disabled" href="#">{{'bauer.engelsk' | trans}} - <span class="badge bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
-      <a class="nav-link disabled" href="#">{{'bauer.romersk-katolsk' | trans}} - <span class="badge bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
-      <a class="nav-link disabled" href="#">{{'bauer.juliansk' | trans}} - <span class="badge bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
-      <a class="nav-link disabled" href="#">{{'bauer.gregoriansk' | trans}} - <span class="badge bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
+      <a class="nav-link disabled" href="#">{{'bauer.norsk' | trans}} - <span class="badge text-bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
+      <a class="nav-link disabled" href="#">{{'bauer.svensk' | trans}} - <span class="badge text-bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
+      <a class="nav-link disabled" href="#">{{'bauer.engelsk' | trans}} - <span class="badge text-bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
+      <a class="nav-link disabled" href="#">{{'bauer.romersk-katolsk' | trans}} - <span class="badge text-bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
+      <a class="nav-link disabled" href="#">{{'bauer.juliansk' | trans}} - <span class="badge text-bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
+      <a class="nav-link disabled" href="#">{{'bauer.gregoriansk' | trans}} - <span class="badge text-bg-info">{{'bauer.kommer-snart' | trans}}</span></a>
     </nav>
   </div>
     <div class="card-footer text-body-secondary">
