--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang={{ app.request.getLocale() }}  data-bs-theme="light">
+<html lang={{ app.request.getLocale() }}  data-bs-theme="light" >
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="application-name" content="{{ product }}"/>
     <meta name="description" content="{{ 'bauer.description' | trans }}">
-    <meta name="keywords" content="Bauers Kalender, Bauers Calendar, Slægtsforskning, Kirkebøger"/>
+    <meta name="keywords" content="{{ 'meta.keywords' | trans }}"/>
     <meta name="author" content="{{ author }}"/>
     <meta name="generator" content="PHP, Symfony 6.3, Bootstrap 5.3.2"/>
     <meta name="google-site-verification" content="xHLmgP5L_DvNjXQsmjCphySJEljc62J2Gt9qdse7sBc" />
