Fuld bredde kalender

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,9 +23,7 @@
     {% endblock %}
 
   </head>
-  <body
-    style='padding-top: 25px;'
-    >
+  <body    style='padding-top: 25px;'>
 
       <!-- Programmets Hovedmenu -->
 
