--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,108 +28,104 @@
       <!-- Programmets Hovedmenu -->
 
     <nav class="navbar navbar-expand-lg fixed-top nnavbar-dark bg-dark text-info" data-bs-theme="dark" >
-  <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-          data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-       <!-- Selve menu strukturen -->
-
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="container-fluid">
         <a class="navbar-brand" href="https://github.com/filicis">Filicis</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"  data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <div class="navbar-nav mr-auto">
-          <!-- a class="nav-item nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a -->
-          <div class= 'nav-item dropdown'>
-            <a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdown01" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown01">
-              <a class="dropdown-item active" href="#">Danmark</a>
-              <a class="dropdown-item disabled" href="#">Norge</a>
-              <a class="dropdown-item disabled" href="#">Sverige</a>
-              <a class="dropdown-item disabled" href="#">Italien</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item disabled" href="#">Juliansk</a>
-              <a class="dropdown-item disabled" href="#">Gregoriansk</a>
-            </div>
-          </div>
-          <div class= 'nav-item dropdown'>
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown02" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sprog</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown02">
-              {% set myval= app.current_route_parameters|merge([{'_locale': 'da',}]) %}
-              <a class="dropdown-item {% if locale == 'da' %} active {% endif %}" href="{{ url(app.current_route, app.current_route_parameters) }}">Dansk</a>
+        <!-- Selve menu strukturen -->
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="navbar-nav mr-auto mb-2 mb-lg-0">
+            <!-- a class="nav-item nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a -->
+            <div class= 'nav-item dropdown'>
+              <a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdown01" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown01">
+                <a class="dropdown-item active" href="#">Danmark</a>
+                <a class="dropdown-item disabled" href="#">Norge</a>
+                <a class="dropdown-item disabled" href="#">Sverige</a>
+                <a class="dropdown-item disabled" href="#">Italien</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item disabled" href="#">Juliansk</a>
+                <a class="dropdown-item disabled" href="#">Gregoriansk</a>
+              </div> <!-- dropdown-menu -->
+            </div> <!-- nav-item dropdown -->
+            <div class= 'nav-item dropdown'>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown02" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sprog</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown02">
+                {% set myval= app.current_route_parameters|merge([{'_locale': 'da',}]) %}
+                <a class="dropdown-item {% if locale == 'da' %} active {% endif %}" href="{{ url(app.current_route, app.current_route_parameters) }}">Dansk</a>
             
-              <a class="dropdown-item {% if locale == 'sv' %} active {% endif %}" href="/sv/setLocale">Svensk</a>
-              <a class="dropdown-item {% if locale == 'no' %} active {% endif %}" href="/no/setLocale">Norsk</a>
-              <a class="dropdown-item {% if locale == 'en' %} active {% endif %}" href="/en/setLocale">Engelsk</a>
-              <a class="dropdown-item {% if locale == 'la' %} active {% endif %}" href="{{ url('tilLatin') }}">Latin</a>
-              <div class="dropdown-divider"></div>
-            </div>
-          </div>
-          <div class= 'nav-item dropdown'>
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown03" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hjælp</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown03">
-              <a class="dropdown-item disabled" href="#">Action</a>
-              <a class="dropdown-item disabled" href="#">Baggrunds materiale</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/da/accordion">Accordion</a>
-              <a class="dropdown-item" href="/da/about">Om..</a>
-            </div>
-          </div>
-        </div>
-    </div>
-      </div>
+                <a class="dropdown-item {% if locale == 'sv' %} active {% endif %}" href="/sv/setLocale">Svensk</a>
+                <a class="dropdown-item {% if locale == 'no' %} active {% endif %}" href="/no/setLocale">Norsk</a>
+                <a class="dropdown-item {% if locale == 'en' %} active {% endif %}" href="/en/setLocale">Engelsk</a>
+                <a class="dropdown-item {% if locale == 'la' %} active {% endif %}" href="{{ url('tilLatin') }}">Latin</a>
+                <div class="dropdown-divider"></div>
+              </div>  <!-- dropdown-menu -->
+            </div> <!-- nav-item dropdown -->
+            <div class= 'nav-item dropdown'>
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown03" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hjælp</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown03">
+                <a class="dropdown-item disabled" href="#">Action</a>
+                <a class="dropdown-item disabled" href="#">Baggrunds materiale</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="/da/accordion">Accordion</a>
+                <a class="dropdown-item" href="/da/about">Om..</a>
+              </div> <!-- dropdown-menu -->
+            </div> <!-- nav-item dropdown -->
+          </div> <!-- navbar-nav -->
 
-      {% if our_form is defined %}
+          {% if our_form is defined %}
+            {{ form_start(our_form, {'attr': {'class': 'form-inline  my-2 my-lg-0'} }) }}
+            {#
+              <div class="custom-control custom-switch px-3" >
+                {{ form_widget(our_form.latin, {'type': 'checkbox', 'attr': {'class': 'custom-control-input', type: 'checkbox', empty_data: 'false'  }}) }}
+                <label class="custom-control-label" for="form_latin">Latin</label>
+              </div>
+            #}
+            {{ form_widget(our_form.year, {'attr': {'class': 'form-control mr-sm-2', 'placeholder': 'Årstal', 'type': 'number', 'aria-label': 'Search'} }) }}
+            {{ form_widget(our_form.send, {'label': 'Vælg', 'attr': {'class': 'd-none btn btn-outline-primary my-2 my-sm-0'} })}}
+            {{ form_rest(our_form) }}
+            {{ form_end(our_form )}}
+          {% endif %}
 
-
-      {{ form_start(our_form, {'attr': {'class': 'form-inline  my-2 my-lg-0'} }) }}
-{#
-        <div class="custom-control custom-switch px-3" >
-          {{ form_widget(our_form.latin, {'type': 'checkbox', 'attr': {'class': 'custom-control-input', type: 'checkbox', empty_data: 'false'  }}) }}
-          <label class="custom-control-label" for="form_latin">Latin</label>
-        </div>
-#}
-        {{ form_widget(our_form.year, {'attr': {'class': 'form-control mr-sm-2', 'placeholder': 'Årstal', 'type': 'number', 'aria-label': 'Search'} }) }}
-        {{ form_widget(our_form.send, {'label': 'Vælg', 'attr': {'class': 'd-none btn btn-outline-primary my-2 my-sm-0'} })}}
-         {{ form_rest(our_form) }}
-      {{ form_end(our_form )}}
-      {% endif %}
-    </div>
-          <div class="navbar-expand d-flex flex-row-reverse" id="navbarNavAltMarkup" >
-      <!-- div class="navbar-expand justify-content-end" id="navbarNavAltMarkup" -->
+      <div class="navbar-expand d-flex flex-row-reverse" id="navbarNavAltMarkup" >
+        <!-- div class="navbar-expand justify-content-end" id="navbarNavAltMarkup" -->
         <div class="navbar-nav mr_auto">
           {% if is_granted('IS_AUTHENTICATED_FULLY') or is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-             <span class= "navbar-text">Bruger: {{ app.user.username }} </span>
+            <span class= "navbar-text">Bruger: {{ app.user.username }} </span>
             <a class="nav-item nav-link" href="{{ path('app_default') }}">Logout</a>
-           {% else %}
+          {% else %}
             <a class="nav-item nav-link" href="{{ path('app_default') }}">Login</a>
           {% endif %}
         </div>
       </div>
-  </nav>
 
-  {% include 'about.html.twig' %}
 
-  {% block body %}{% endblock %}
+        </div> <!-- Collapse -->
+      </div> <!-- Container -->
+    </nav>
 
-  {% block javascripts %}
+    {% include 'about.html.twig' %}
 
-    <!-- Bootstrap relaterede scripts -->
+    {% block body %}{% endblock %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    {% block javascripts %}
+
+      <!-- Bootstrap relaterede scripts -->
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-    <!-- Slut på Bootstrap relaterede scripts -->
+      <!-- Slut på Bootstrap relaterede scripts -->
 
-    <!-- Aktiverer Tooltip -->
-    <script> 
-      const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-      const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
-    </script >
+      <!-- Aktiverer Tooltip -->
+      <script> 
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
+      </script >
 
-    <!-- endblock javascripts -->
-  {% endblock %}
-
-</body>
+    {% endblock %}
+  </body>
 </html>
