--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
         <!-- Selve menu strukturen -->
 
         <div class="collapse navbar-collapse" id="navbarNav">
-          <div class="navbar-nav mr-auto mb-2 mb-lg-0">
+          <div class="navbar-nav me-auto mb-2 mb-lg-0">
             <!-- a class="nav-item nav-link" href="/about">Hjem<span class="sr-only">(current)</span></a -->
             <div class= 'nav-item dropdown'>
               <a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdown01" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kalender</a>
@@ -77,7 +77,7 @@
           </div> <!-- navbar-nav -->
 
           {% if our_form is defined %}
-            {{ form_start(our_form, {'attr': {'class': 'form-inline  my-2 my-lg-0'} }) }}
+            {{ form_start(our_form, {'attr': {'class': 'form-inline me-auto my-2 my-lg-0'} }) }}
             {#
               <div class="custom-control custom-switch px-3" >
                 {{ form_widget(our_form.latin, {'type': 'checkbox', 'attr': {'class': 'custom-control-input', type: 'checkbox', empty_data: 'false'  }}) }}
